--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,5 +1,5 @@
 nav {
-    width: 50%;
+    width: 75%;
     height: 69px;
     display: flex;
     justify-content: space-between;
@@ -15,6 +15,7 @@ nav.open {
 
 .logo img {
     max-height: 50px;
+    padding-right: 25px;
 }
 
 .menu-toggle {
