Update styles and content in BannerHomepage and Button components

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,13 @@
 color:white;
 }
 
+.white button {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
+.white button:hover{
+  background-color:#FF6B00 ;
+  border: none;
+  color:black;
+}
