--- a/src/Components/Button.css
+++ b/src/Components/Button.css
@@ -1,7 +1,8 @@
 button{
-    background-color: aquamarine;
-    border-radius: 10px;
-    border: none;
-    padding: 20px;
+    border:1px solid white;
+    background-color: transparent;
+    color: white;
+    padding: 15px;
     font-size: 14px;
+    transition: background-color 0.6s ease ;
 }
