--- a/src/Components/Button.css
+++ b/src/Components/Button.css
@@ -1,7 +1,7 @@
 button{
     border:1px solid white;
     background-color: transparent;
-    color: white;
+    color: black;
     padding: 15px;
     font-size: 14px;
     transition: background-color 0.6s ease ;
