--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,12 +1,16 @@
 nav {
-    width: 62%;
+    width: 100%;
     height: 69px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    position: relative;
+    position: fixed;
     transition: background-color 0.3s ease;
+    z-index: 9999;
+    background-color: white;
+   padding-left: 100px;
+  
 }
 
 nav.open {
