--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -6,9 +6,9 @@ nav {
     align-items: center;
     margin: auto;
     position: fixed;
-    transition: background-color 0.3s ease;
     background-color: white;
-  
+    transition: background-color 0.3s ease;
+    z-index: 1000;
 }
 
 nav.open {
