--- a/src/Components/Layout.css
+++ b/src/Components/Layout.css
@@ -77,25 +77,21 @@
 
 
 }
-.layout2 .layout-content button{
-  margin-top: 30px;
 
-}
+
+
 
 .layout2 .layout-content{
-  position: relative;
-  right: 47%;
-  bottom: 456px;
-  height: 433px;
-  margin-top: 1%;
-  line-height: 1;
+  position: absolute;
+width:500px;
+height:445px;
+top: 127%;
+left: 27%;
 background-color: white;
 
 }
-.layout2 .layout-content button{
-  margin-top: 30px;
 
-}
+
 
 
 @media (max-width: 768px) {
