Update styles in Layout.css for layout1 and layout2 components

--- a/src/Components/Layout.css
+++ b/src/Components/Layout.css
@@ -45,12 +45,11 @@
 
 .layout-content {
   flex: 1; 
-  background-color: white;
+  
 }
 .layout-content h1{
   margin-bottom: 15px;
   font-size: 40px;
-  background-color: white;
 }
 
 .layout-image {
@@ -82,7 +81,15 @@
 
 
 
+.layout2 .layout-content{
+  position: absolute;
+width:950px;
+height:435px;
+top: 127%;
+left: 0.20%;
+background-color: white;
 
+}
 
 
 
