--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -9,6 +9,7 @@ nav {
     background-color: white;
     transition: background-color 0.3s ease;
     z-index: 1000;
+    font-size: 14px;
 }
 
 nav.open {
@@ -37,6 +38,7 @@ nav.open {
     list-style-type: none;
     padding: 0;
     margin: 0;
+    padding-left: 10px;
     display: flex;
     justify-content:  flex-start;
     flex-grow: 1; /* Ensure the navbar items occupy the remaining space */
