--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -3,5 +3,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #F56E2C; 
+    flex-direction: column;
+   
+}
+.footer ul li {
     list-style-type: none;
+    padding: 5px;
+    color:white;
+}
+.footer ul li a {
+    color:white;
 }
