Refactor Footer component styles in Footer.css

--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -2,16 +2,26 @@
     /* Add your footer styles here */
     display: flex;
     justify-content: center;
-    align-items: center;
     background-color: #F56E2C; 
+    text-align: center;
     flex-direction: column;
-   
+   z-index: 999;
 }
 .footer ul li {
     list-style-type: none;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+    width:100%;
     padding: 5px;
     color:white;
 }
+
 .footer ul li a {
     color:white;
 }
+
+/* .footer ul li h2 {
+    padding-right: 300px;
+    padding-left: 500px;
+} */
