--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,11 +1,22 @@
-.footer {
-    /* Add your footer styles here */
+/* .footer {
+    position: relative;
     display: flex;
     justify-content: center;
     background-color: #F56E2C; 
     text-align: center;
-    flex-direction: column;
-   z-index: 999;
+    flex-direction: row;
+    z-index: 2;
+    padding :10px 10px ;
+} */
+.footer {
+    color: aliceblue;
+    text-align: center;
+    background-color: #F56E2C;
+    font-size: 15px;
+    width: 100%;
+    height: 10rem;
+    display: grid;
+    grid-template-columns: 3fr 6fr 1fr 1fr 1fr;
 }
 .footer ul li {
     list-style-type: none;
@@ -15,13 +26,12 @@
     width:100%;
     padding: 5px;
     color:white;
+    
 }
 
 .footer ul li a {
     color:white;
 }
 
-/* .footer ul li h2 {
-    padding-right: 300px;
-    padding-left: 500px;
-} */
+
+
