--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -75,8 +75,10 @@ nav.open {
         
         
     }
-    .logo img{
+    .logo img {
         max-height: 35px;
+        padding-right: 0px;
+        padding-left: 0px;
     }
     .navbar li a{
         color: white;
