--- a/src/Components/BannerHomepage.css
+++ b/src/Components/BannerHomepage.css
@@ -1,19 +1,57 @@
-.banner-homepage img{
-    width: 100%;
-}
-.banner-text {
+.banner-homepage {
+    position: relative; /* Ensure the container establishes a positioning context */
+    max-width: 100%; /* Ensure the container does not exceed its parent's width */
+    overflow: hidden; /* Hide any overflow from the image */
+   
+  }
+  
+  .banner-homepage img {
+    width: 100%; /* Ensure the image spans the full width of its container */
+    height: auto; /* Maintain the aspect ratio */
+    display: block; /* Remove any extra spacing */
+  }
+  
+  .banner-text {
     position: absolute;
     top: 37%;
     left: 35%;
-    transform: translate(-50%, -50%); 
-}
-.banner-text h1{
+    transform: translate(-50%, -50%);
+  }
+  
+  .banner-text h1 {
     font-size: 48px;
-    
-}
-.banner-text p{
+  }
+  
+  .banner-text p {
     margin-top: 25px;
     line-height: 1.5;
     font-size: 20px;
-    width: 600px;
-}
+    width: 600px; /* Initial width for desktop */
+  }
+  
+  /* Media query for mobile devices */
+  @media (max-width: 768px) {
+    .banner-text {
+      position: relative; /* Reset position */
+      top: auto;
+      left: auto;
+      transform: none;
+      
+      padding: 20px; /* Add padding */
+      color: black;
+    }
+  
+    .banner-text h1 {
+      font-size: 42px;
+      
+    }
+  
+    .banner-text p {
+      font-size: 16px;
+      width: 100%; /* Full width on mobile */
+      max-width: 100%; /* Ensure it doesn't exceed the container width */
+      margin-left: auto; /* Center align */
+      margin-right: auto; /* Center align */
+    }
+  }
+  
